# fih_rust

./: Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  docker-compose.yml
src/: main.rs
