[package]
name = "fih_rust"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = false

[dependencies]
fast_image_resize = { version = "5.1.0", features = ["image", "rayon"] }
image = { version = "0.25.5", features = ["avif-native"] }
tempfile = "3.3.0"
rocket = { version = "0.5.1", features = ["json"] }
blake3 = "1.6.1"
serde = "1.0.218"
reqwest = "0.12.12"
serde_json = "1.0.139"
libheif-rs = { version = "1.1.0" }
jpegxl-rs = "0.11.2"
log = "0.4.27"
env_logger = "0.11.8"
tabled = "0.20.0"
rapid-qoi = "0.6.1"
